# advent_of_code

./: .gitignore  README.md
adventcode/day1/: day1.py
python/2023/: pyproject.toml
python/2023/adventcode/day1/: input.csv
python/2024/: README.md  pyproject.toml
python/2024/src/solutions/: __init__.py  day_001.py
python/2024/tests/: test_day_001.py
rust/2024/: Cargo.toml  README.md
rust/2024/src/: day_001.rs  day_002.rs  day_003.rs  day_004.rs  lib.rs
tests/: test_solutions.py
tests/test_data/: input_day1.csv
