[tool.poetry]
name = "adventcode"
version = "0.1.0"
description = ""
authors = ["Isaias Gutierrez Cruz <isaiascruz@comunidad.unam.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.19.19"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
