[project]
name = "solutions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Isaias Gutierrez Cruz", email = "" }
]
requires-python = ">=3.12"
dependencies = [
    "advent-of-code-data>=2.0.4",
]

[project.scripts]
solutions = "solutions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
